# rag

./: .dockerignore  .env.example  .gitattributes  .gitignore  Dockerfile  README.md  app.py  pyproject.toml
.github/workflows/: ci.yml
.streamlit/: config.toml
assets/: theme.css
deploy/oci/: compose.yaml  install-docker.sh
docs/deployment/: README.md
src/rag_alura/: __init__.py  assistant.py  config.py  document_links.py  documents.py  knowledge_base.py  web_search.py
tests/: test_app_markup.py  test_assistant.py  test_chroma_integration.py  test_config.py  test_document_links.py  test_documents.py  test_knowledge_base.py  test_web_search.py
