[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "rag-alura"
version = "0.1.0"
description = "Document-grounded RAG assistant for PDF and CSV files"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
  "chromadb>=1.0,<2.0",
  "ddgs>=9.0,<10.0",
  "langchain>=1.0,<2.0",
  "langchain-chroma>=0.2,<2.0",
  "langchain-google-genai>=2.0,<3.0",
  "langchain-text-splitters>=0.3,<2.0",
  "pandas>=2.2,<3.0",
  "pypdf>=5.0,<7.0",
  "python-dotenv>=1.0,<2.0",
  "streamlit>=1.45,<2.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<10.0",
  "pytest-cov>=5.0,<8.0",
  "ruff>=0.12,<1.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --cov=rag_alura --cov-report=term-missing --cov-fail-under=80"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
